--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ body {
     width: 100px;
     border-radius: 50%;
     background-color: red;
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3)
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+    animation: bounce 2s infinite ease-in-out;
 
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0);
+
+    }
+
+    50% {
+        transform: translateY(-200px);
+    }
 }
